# tusk

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  parse_patch.py  parse_test.rs  patch_ast.py  patch_ast2.py  restore.py
.github/workflows/: ci.yml  deploy.yml
docs/: architecture.md  language.md
src/: ast.rs  calculus.rs  definite.rs  engine.rs  heuristics.rs  lib.rs  main.rs  risch.rs  ui.rs
web/: astro.config.mjs  package-lock.json  package.json
web/.astro/: settings.json
web/public/pkg/: package.json  tusk.d.ts  tusk.js  tusk_bg.wasm  tusk_bg.wasm.d.ts
web/src/layouts/: DocsLayout.astro
web/src/pages/: docs.astro  index.astro
web/src/pages/docs/: [...slug].astro
