[package]
name = "tusk"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
nom = "8.0"
plotters = { version = "0.3.7", features = ["svg_backend"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.29"
ratatui = "0.29"

[lib]
crate-type = ["cdylib"]
